--- a/lab9/lab9.vcxproj.filters
+++ b/lab9/lab9.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="cControler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CXBOXController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cEnemy.h">
